--- a/portfolio/Portfolio-Website/index.html
+++ b/portfolio/Portfolio-Website/index.html
@@ -142,7 +142,7 @@
     <div class="box-container">
     <div class="box">
       <div class="image">
-      <img draggable="false" src="vnuis.jpg" alt="">
+      <img draggable="false" src="./assets/images/educat/vnuis.jpg" alt="">
       </div>
       <div class="content">
       <h3>IS-VNU</h3>
